<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">
    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#ECE9E9"
        android:backgroundTint="#ECE9E9"

        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/profile"
            app:srcCompat="@drawable/profile"
          />

        <TextView
            android:id="@+id/nav_header_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textColor="@color/black"
            android:text="@string/nav_header_title"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/nav_header_mail"
            android:textColor="#606060"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            />


    </LinearLayout>
    <View
    android:background="#373636"
    android:layout_width="match_parent"
    android:layout_height="1dp"/>

    <LinearLayout
        android:paddingLeft="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:drawableLeft="@drawable/baseline_home_24"
            android:drawablePadding="10dp"
            android:id="@+id/tv_home"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/menu_home"
                        android:fontFamily="@font/boubaround_regular"


            android:textSize="18sp"
            android:textColor="#344D80"
            />
        <TextView
            android:drawableLeft="@drawable/baseline_account_circle_24"
            android:drawablePadding="10dp"
            android:id="@+id/tv_profile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/menu_profile"
            android:textSize="18sp"
            android:layout_margin="5dp"
                        android:fontFamily="@font/boubaround_regular"


            android:textColor="#344D80"

            />

        <!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="40dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:text="@string/menu_offer"-->
<!--            android:textColor="@color/black"-->
<!--            />-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="40dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:text="@string/menu_newproduct"-->
<!--            android:textColor="@color/black"-->
<!--            />-->
        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/baseline_category_24"
            android:drawablePadding="10dp"
                        android:fontFamily="@font/boubaround_regular"

            android:gravity="center_vertical"
            android:text="@string/menu_category"
            android:textColor="#344D80"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/baseline_local_shipping_24"
            android:drawablePadding="10dp"
            android:layout_margin="5dp"
                        android:fontFamily="@font/boubaround_regular"

            android:id="@+id/tv_myorder"
            android:gravity="center_vertical"
            android:text="@string/menu_my_order"
            android:textColor="#344D80"
            android:textSize="18sp" />

        <TextView
            android:drawableLeft="@drawable/baseline_shopping_cart_24"
            android:drawablePadding="10dp"
            android:id="@+id/tv_Mycart"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/boubaround_regular"


            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/menu_my_card"
            android:textColor="#344D80"
            />

    </LinearLayout>
    <View
        android:background="#373636"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:paddingLeft="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="400dp">

        <TextView
            android:drawableLeft="@drawable/baseline_stars_24"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="Rating App "
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/boubaround_regular"
android:visibility="gone"

            android:textColor="#344D80"
            />
        <TextView
            android:drawableLeft="@drawable/baseline_feedback_24"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="Feedback"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:fontFamily="@font/boubaround_regular"
            android:id="@+id/tv_feedback"
            android:textColor="#344D80"

            />
        <TextView
            android:drawableLeft="@drawable/baseline_share_24"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:layout_margin="5dp"
                        android:fontFamily="@font/boubaround_regular"
            android:id="@+id/tv_share"


            android:text="Share"
            android:textColor="#344D80"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/baseline_privacy_tip_24"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:layout_margin="5dp"
                        android:fontFamily="@font/boubaround_regular"
            android:id="@+id/tv_policy"


            android:text="Privacy Policy"
            android:textColor="#344D80"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>

